syntax = "proto3";

package auth;
option go_package="./auth";

message LoginReq {
  string username = 1;
  string password = 2;
}

message LoginResp {
  string token = 1;
} 

message RegisterReq {
  string username = 1;
  string password = 2;
  string confirm_password = 3;
}

message RegisterResp {
  string token = 1;
}

service AdminAuthService {
  rpc Login(LoginReq) returns (LoginResp);
  rpc Register(RegisterReq) returns (RegisterResp);
}

service ApiAuthService {
  rpc Login(LoginReq) returns (LoginResp);
  rpc Register(RegisterReq) returns (RegisterResp);
}
